--- a/config/secret.yml
+++ b/config/secret.yml
@@ -1,3 +1,8 @@
-secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+development:
+  secret_key_base:
+
+test:
+  secret_key_base:
+
 production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: 4a287b27174149f5fa2ae90a8efe433d
